@@ -1,3 +1,7 @@
+2003-05-27  Heikki Junes  <hjunes@cc.hut.fi>
+
+	* lilypond-indent.el: allow strings in LilyPond-parens-alist.
+
 2003-05-26  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* Documentation/user/converters.itely (Invoking midi2ly): Update.
